adding csv creation

--- a/election/notebooks/assignment.ipynb
+++ b/election/notebooks/assignment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 65,
    "metadata": {
     "collapsed": true
    },
@@ -14,8 +14,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def reference_replacer(df):\n",
@@ -40,8 +42,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
+   "execution_count": 67,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "p = '/home/jasonmellone/Documents/nyu/DSQF/election/geo/elections/2016/'"
@@ -49,8 +53,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
+   "execution_count": 68,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "primary_data = pd.read_csv(p + 'primary.csv')"
@@ -58,8 +64,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
+   "execution_count": 69,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "dem_data = pd.read_csv('/home/jasonmellone/Documents/nyu/DSQF/election/primary_data/cleaned_dems.csv')"
@@ -67,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 70,
    "metadata": {
     "collapsed": true
    },
@@ -78,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1416,7 +1424,7 @@
        "[103 rows x 15 columns]"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1427,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1465,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1497,332 +1505,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 84,
    "metadata": {
     "scrolled": true
    },
+   "outputs": [],
+   "source": [
+    "cleaned_dem_state_date = dem_data.groupby('State/territory').agg({'Date':'max'}).sort_values('Date').reset_index()\n",
+    "dem_data = pd.merge(dem_data,cleaned_dem_state_date,on=['State/territory','Date'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleaned_rep_state_date = rep_data.groupby('State').agg({'Date':'max'}).sort_values('Date').reset_index()\n",
+    "rep_data = pd.merge(rep_data,cleaned_rep_state_date,on=['State','Date'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dem_data = dem_data.rename(columns={'State/territory':'state','Date':'primary_date','Type':'primary_type'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rep_data = rep_data.rename(columns={'State':'state','Allocation-Contest':'primary_type','Date':'primary_date'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "primary_data_dems = pd.merge(primary_data[primary_data.party1=='D'],dem_data[['state','primary_date','primary_type']],on='state',how='outer')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "primary_data_reps = pd.merge(primary_data[primary_data.party1=='R'],dem_data[['state','primary_date','primary_type']],on='state',how='outer')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "appended_two_party_primary_data = primary_data_dems.append(primary_data_reps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>State/territory</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Alabama</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Montana</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Nevada</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>New Hampshire</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>New Jersey</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>New Mexico</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>New York</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>North Carolina</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>North Dakota</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Northern Marianas</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Ohio</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Oklahoma</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Wisconsin</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Oregon</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Puerto Rico</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Rhode Island</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>South Carolina</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>South Dakota</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Tennessee</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Texas</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Utah</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Vermont</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Virgin Islands</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Virginia</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>West Virginia</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Pennsylvania</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Mississippi</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Missouri</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Michigan</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Alaska</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>American Samoa</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Arizona</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Arkansas</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>California</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Colorado</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Connecticut</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Delaware</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>District of Columbia</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Florida</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Minnesota</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Guam</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Georgia</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Idaho</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Illinois</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Indiana</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Iowa</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Kansas</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Kentucky</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Louisiana</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Maine</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Maryland</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Massachusetts</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Hawaii</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Wyoming</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Nebraska</th>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Washington</th>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Democrats Abroad</th>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                      Date\n",
-       "State/territory           \n",
-       "Alabama                  1\n",
-       "Montana                  1\n",
-       "Nevada                   1\n",
-       "New Hampshire            1\n",
-       "New Jersey               1\n",
-       "New Mexico               1\n",
-       "New York                 1\n",
-       "North Carolina           1\n",
-       "North Dakota             1\n",
-       "Northern Marianas        1\n",
-       "Ohio                     1\n",
-       "Oklahoma                 1\n",
-       "Wisconsin                1\n",
-       "Oregon                   1\n",
-       "Puerto Rico              1\n",
-       "Rhode Island             1\n",
-       "South Carolina           1\n",
-       "South Dakota             1\n",
-       "Tennessee                1\n",
-       "Texas                    1\n",
-       "Utah                     1\n",
-       "Vermont                  1\n",
-       "Virgin Islands           1\n",
-       "Virginia                 1\n",
-       "West Virginia            1\n",
-       "Pennsylvania             1\n",
-       "Mississippi              1\n",
-       "Missouri                 1\n",
-       "Michigan                 1\n",
-       "Alaska                   1\n",
-       "American Samoa           1\n",
-       "Arizona                  1\n",
-       "Arkansas                 1\n",
-       "California               1\n",
-       "Colorado                 1\n",
-       "Connecticut              1\n",
-       "Delaware                 1\n",
-       "District of Columbia     1\n",
-       "Florida                  1\n",
-       "Minnesota                1\n",
-       "Guam                     1\n",
-       "Georgia                  1\n",
-       "Idaho                    1\n",
-       "Illinois                 1\n",
-       "Indiana                  1\n",
-       "Iowa                     1\n",
-       "Kansas                   1\n",
-       "Kentucky                 1\n",
-       "Louisiana                1\n",
-       "Maine                    1\n",
-       "Maryland                 1\n",
-       "Massachusetts            1\n",
-       "Hawaii                   1\n",
-       "Wyoming                  1\n",
-       "Nebraska                 2\n",
-       "Washington               2\n",
-       "Democrats Abroad         8"
+       "array(['Open primary', 'Closed caucus', 'Closed primary',\n",
+       "       'Semi-closed primary', nan, 'Semi-closed caucus', 'Open caucus',\n",
+       "       'Semi-open caucus', 'Semi-open primary'], dtype=object)"
       ]
      },
      "execution_count": 100,
@@ -1830,157 +1588,6 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "dem_data.groupby('State/territory').agg({'Date':'count'}).sort_values('Date')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>wrongDate</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>State/territory</th>\n",
-       "      <th>Calculated delegates-P</th>\n",
-       "      <th>Calculated delegates-U</th>\n",
-       "      <th>Calculated delegates-T</th>\n",
-       "      <th>Type</th>\n",
-       "      <th>Clinton-Popular Vote or Equivalent</th>\n",
-       "      <th>Clinton-Delegate Category</th>\n",
-       "      <th>Clinton-Vote Percent</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Sanders-Vote Percent</th>\n",
-       "      <th>Clinton-P</th>\n",
-       "      <th>Clinton-U</th>\n",
-       "      <th>Clinton-T</th>\n",
-       "      <th>Sanders-P</th>\n",
-       "      <th>Sanders-U</th>\n",
-       "      <th>Sanders-T</th>\n",
-       "      <th>Available[e]-P</th>\n",
-       "      <th>Available[e]-U</th>\n",
-       "      <th>Available[e]-T</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>03/05/17</td>\n",
-       "      <td>03/05/16</td>\n",
-       "      <td>Nebraska</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>Closed caucus</td>\n",
-       "      <td>14340</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.43</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.57</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>52</th>\n",
-       "      <td>05/10/17</td>\n",
-       "      <td>05/10/16</td>\n",
-       "      <td>Nebraska</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Closed primary</td>\n",
-       "      <td>42692</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.53</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.47</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>nan</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2 rows × 22 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   wrongDate      Date State/territory  Calculated delegates-P  \\\n",
-       "18  03/05/17  03/05/16        Nebraska                    25.0   \n",
-       "52  05/10/17  05/10/16        Nebraska                     0.0   \n",
-       "\n",
-       "   Calculated delegates-U  Calculated delegates-T            Type  \\\n",
-       "18                      5                    30.0   Closed caucus   \n",
-       "52                      0                     0.0  Closed primary   \n",
-       "\n",
-       "    Clinton-Popular Vote or Equivalent Clinton-Delegate Category  \\\n",
-       "18                               14340                       NaN   \n",
-       "52                               42692                       NaN   \n",
-       "\n",
-       "    Clinton-Vote Percent       ...        Sanders-Vote Percent Clinton-P  \\\n",
-       "18                  0.43       ...                        0.57      10.0   \n",
-       "52                  0.53       ...                        0.47       NaN   \n",
-       "\n",
-       "    Clinton-U  Clinton-T  Sanders-P  Sanders-U  Sanders-T  Available[e]-P  \\\n",
-       "18        3.0       13.0       15.0        1.0       16.0             0.0   \n",
-       "52        NaN        NaN        NaN        NaN        NaN             NaN   \n",
-       "\n",
-       "    Available[e]-U  Available[e]-T  \n",
-       "18               1               1  \n",
-       "52             nan             nan  \n",
-       "\n",
-       "[2 rows x 22 columns]"
-      ]
-     },
-     "execution_count": 108,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dem_data[dem_data['State/territory']=='Nebraska']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
    "source": []
   }
  ],
