--- a/election/notebooks/assignment.ipynb
+++ b/election/notebooks/assignment.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 102,
    "metadata": {
     "collapsed": true
    },
@@ -42,18 +42,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/jasonmellone/Documents/nyu/DSQF/election/notebooks'"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "p = '/home/jasonmellone/Documents/nyu/DSQF/election/geo/elections/2016/'"
+    "p = '../geo/elections/2016/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 116,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "save_dir='../primary_data/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
    "metadata": {
     "collapsed": true
    },
@@ -64,24 +96,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 110,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "dem_data = pd.read_csv('/home/jasonmellone/Documents/nyu/DSQF/election/primary_data/cleaned_dems.csv')"
+    "dem_data = pd.read_csv('../primary_data/cleaned_dems.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 111,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "rep_data = pd.read_csv('/home/jasonmellone/Documents/nyu/DSQF/election/primary_data/cleaned_reps.csv')"
+    "rep_data = pd.read_csv('../primary_data/cleaned_reps.csv')"
    ]
   },
   {
@@ -1572,22 +1604,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 117,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['Open primary', 'Closed caucus', 'Closed primary',\n",
-       "       'Semi-closed primary', nan, 'Semi-closed caucus', 'Open caucus',\n",
-       "       'Semi-open caucus', 'Semi-open primary'], dtype=object)"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "appended_two_party_primary_data.to_csv(save_dir + 'primary_processed.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": []
   }
  ],
