--- a/election/notebooks/classification.ipynb
+++ b/election/notebooks/classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 199,
    "metadata": {
     "collapsed": true
    },
@@ -12,12 +12,15 @@
     "from sklearn import linear_model\n",
     "import pandas as pd\n",
     "from sklearn import preprocessing\n",
-    "import datetime"
+    "import datetime\n",
+    "from sklearn.metrics import precision_recall_curve\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -26,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 159,
    "metadata": {
     "collapsed": true
    },
@@ -37,36 +40,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
     "dems = pd.read_csv('/home/jasonmellone/Documents/nyu/DSQF/stitched_data/county_dems.csv')\n",
-    "dems.primary_date = pd.to_datetime(dems.primary_date)"
+    "dems.primary_date = pd.to_datetime(dems.primary_date)\n",
+    "dems = dems.dropna()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
     "reps = pd.read_csv('/home/jasonmellone/Documents/nyu/DSQF/stitched_data/county_reps.csv')\n",
-    "reps.primary_date = pd.to_datetime(dems.primary_date)"
+    "reps.primary_date = pd.to_datetime(dems.primary_date)\n",
+    "reps=reps.dropna()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
-    "le = preprocessing.LabelEncoder()"
+    "dem_encoding = preprocessing.LabelEncoder()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -75,88 +80,126 @@
        "LabelEncoder()"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "le.fit(list(set(dems['1st'].unique()).union(dems['2nd'].unique()).union(dems['3rd'].unique())))"
+    "dem_encoding.fit(list(set(dems['1st'].unique()).union(dems['2nd'].unique()).union(dems['3rd'].unique())))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dems['1st_encoded'] = le.transform(dems['1st'].values)"
+    "dems['1st_encoded'] = dem_encoding.transform(dems['1st'].values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "dems['2nd_encoded'] = le.transform(dems['2nd'].values)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dems['3rd_encoded']= le.transform(dems['3rd'].values)"
+    "dems['2nd_encoded'] = dem_encoding.transform(dems['2nd'].values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for c in dems.columns:\n",
+    "    if dems[c].dtype=='object' and c not in ['1st','2nd','3rd'] and c!='party3':\n",
+    "        print(c)\n",
+    "        le = preprocessing.LabelEncoder()\n",
+    "        le.fit(dems[c].unique())\n",
+    "        dems[c] = le.transform(dems[c].values)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2016-02-01T00:00:00.000000000\n",
-      "2016-02-09T00:00:00.000000000\n",
-      "2016-02-20T00:00:00.000000000\n",
-      "2016-02-27T00:00:00.000000000\n",
-      "2016-03-01T00:00:00.000000000\n",
-      "2016-03-05T00:00:00.000000000\n",
-      "2016-03-06T00:00:00.000000000\n",
-      "2016-03-08T00:00:00.000000000\n",
-      "2016-03-15T00:00:00.000000000\n",
-      "2016-03-22T00:00:00.000000000\n",
-      "2016-03-26T00:00:00.000000000\n",
-      "2016-04-05T00:00:00.000000000\n",
-      "2016-04-09T00:00:00.000000000\n",
-      "2016-04-19T00:00:00.000000000\n",
-      "2016-04-26T00:00:00.000000000\n",
-      "2016-05-03T00:00:00.000000000\n",
-      "2016-05-10T00:00:00.000000000\n",
-      "2016-05-17T00:00:00.000000000\n",
-      "2016-05-24T00:00:00.000000000\n",
-      "2016-06-07T00:00:00.000000000\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jasonmellone/anaconda2/envs/py3dsqf/lib/python3.5/site-packages/ipykernel_launcher.py:1: FutureWarning: In the future, 'NAT < x' and 'x < NAT' will always be False.\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n",
-      "/home/jasonmellone/anaconda2/envs/py3dsqf/lib/python3.5/site-packages/ipykernel_launcher.py:2: FutureWarning: In the future, 'NAT == x' and 'x == NAT' will always be False.\n",
-      "  \n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-211-8e59d466e233>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-211-8e59d466e233>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    param_grid =\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "clf = linear_model.SGDClassifier(loss='hinge')\n",
+    "param_grid = {\n",
+    "    \n",
+    "    'loss':['hinge'],\n",
+    "    'penalty':['l2', 'l1','elasticnet'],\n",
+    "    'alpha':[0.0001,0.0001*10,0.0001*100.],\n",
+    "    'l1_ratio':[.15,.3,.5,.7],\n",
+    "    'learning_rate':['invscaling','optimal']\n",
+    "}\n",
+    "\n",
+    "#loss=’hinge’,\n",
+    "# penalty=’l2’,\n",
+    "# alpha=0.0001, \n",
+    "# l1_ratio=0.15,\n",
+    "# fit_intercept=True, \n",
+    "# max_iter=None,\n",
+    "# tol=None,\n",
+    "# shuffle=True,\n",
+    "# verbose=0,\n",
+    "# epsilon=0.1,\n",
+    "# n_jobs=1,\n",
+    "# random_state=None,\n",
+    "# learning_rate=’optimal’,\n",
+    "# eta0=0.0,\n",
+    "# power_t=0.5,\n",
+    "# class_weight=None,\n",
+    "# warm_start=False,\n",
+    "# average=False,\n",
+    "# n_iter=None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1>Dems - Hinge</h1>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jasonmellone/anaconda2/envs/py3dsqf/lib/python3.5/site-packages/sklearn/linear_model/stochastic_gradient.py:128: FutureWarning: max_iter and tol parameters have been added in <class 'sklearn.linear_model.stochastic_gradient.SGDClassifier'> in 0.19. If both are left unset, they default to max_iter=5 and tol=None. If tol is not None, max_iter defaults to max_iter=1000. From 0.21, default max_iter will be 1000, and default tol will be 1e-3.\n",
+      "  \"and default tol will be 1e-3.\" % type(self), FutureWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "loss = 'log'\n",
+    "clf_first = linear_model.SGDClassifier(loss=loss)\n",
+    "clf_second = linear_model.SGDClassifier(loss=loss)\n",
     "Xs = ['votes1','votes2','votes3','pct1','pct2','pct3','primary_type','edge1','edge2','edge3',\n",
     "      'Abbreviation','area_name','state_abbreviation','PST045214','PST040210','PST120214',\n",
     "      'POP010210','AGE135214','AGE295214','AGE775214','SEX255214','RHI125214','RHI225214',\n",
@@ -169,61 +212,144 @@
     "\n",
     "y_first = '1st_encoded'\n",
     "y_second = '2nd_encoded'\n",
+    "sorted_dates = sorted(dems.primary_date.unique())\n",
     "\n",
-    "for dt in sorted(dems.primary_date.unique()):\n",
-    "    if not dt==np.datetime64('NaT'):\n",
+    "for dt in sorted_dates:\n",
+    "    if not dt==np.datetime64('NaT') and dt>sorted_dates[1] :\n",
     "        \n",
     "        dems_past = dems[dems.primary_date<dt].copy()\n",
     "        dems_current = dems[dems.primary_date==dt].copy()\n",
     "        \n",
-    "    "
+    "        X_train = dems_past[Xs].values\n",
+    "        y_train_first = dems_past[y_first].values\n",
+    "        y_train_second = dems_past[y_second].values\n",
+    "        \n",
+    "        X_test = dems_current[Xs].values\n",
+    "        y_test_first = dems_current[y_first].values\n",
+    "        y_test_second = dems_current[y_second].values\n",
+    "        \n",
+    "        clf_first.fit(X_train,y_train_first)\n",
+    "        res_first = clf_first.decision_function(X_test)\n",
+    "\n",
+    "        \n",
+    "        clf_second.fit(X_train,y_train_second)\n",
+    "        res_second = clf_first.decision_function(X_test)\n",
+    "        \n",
+    "        \n",
+    "        break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'X' is not defined",
+     "ename": "ValueError",
+     "evalue": "Data is not binary and pos_label is not specified",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-85-76c5c248945b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mclf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mY\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'X' is not defined"
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-205-0b7aa0497b9e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprecision\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrecall\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprecision_recall_curve\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test_first\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mres_first\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/anaconda2/envs/py3dsqf/lib/python3.5/site-packages/sklearn/metrics/ranking.py\u001b[0m in \u001b[0;36mprecision_recall_curve\u001b[0;34m(y_true, probas_pred, pos_label, sample_weight)\u001b[0m\n\u001b[1;32m    439\u001b[0m     fps, tps, thresholds = _binary_clf_curve(y_true, probas_pred,\n\u001b[1;32m    440\u001b[0m                                              \u001b[0mpos_label\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpos_label\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 441\u001b[0;31m                                              sample_weight=sample_weight)\n\u001b[0m\u001b[1;32m    442\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    443\u001b[0m     \u001b[0mprecision\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtps\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mtps\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mfps\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda2/envs/py3dsqf/lib/python3.5/site-packages/sklearn/metrics/ranking.py\u001b[0m in \u001b[0;36m_binary_clf_curve\u001b[0;34m(y_true, y_score, pos_label, sample_weight)\u001b[0m\n\u001b[1;32m    335\u001b[0m              \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray_equal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclasses\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    336\u001b[0m              np.array_equal(classes, [1]))):\n\u001b[0;32m--> 337\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Data is not binary and pos_label is not specified\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    338\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0mpos_label\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    339\u001b[0m         \u001b[0mpos_label\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Data is not binary and pos_label is not specified"
      ]
     }
    ],
    "source": [
-    "clf.fit(X, Y)"
+    "precision, recall, _ = precision_recall_curve(y_test_first, res_first)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 208,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 0, 2, 2, 0, 0, 0, 2])"
+      ]
+     },
+     "execution_count": 208,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test_first"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 209,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ -2.74750410e+13,  -7.03295758e+12,  -1.07973565e+15,\n",
+       "        -1.19398384e+13,  -3.09411754e+13,   2.41579356e+12,\n",
+       "         3.07192261e+12,  -9.95309574e+12,   1.20293442e+12,\n",
+       "         2.60082344e+12,  -2.38852413e+12,   2.76003290e+12,\n",
+       "        -1.41120842e+13,   2.11782401e+12,   4.60012285e+12,\n",
+       "        -2.63101806e+14,  -4.54010394e+11])"
+      ]
+     },
+     "execution_count": 209,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res_first"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['B. SANDERS', 'B. SANDERS', 'B. SANDERS', 'B. SANDERS',\n",
+       "       'B. SANDERS', 'H. CLINTON', 'H. CLINTON', 'B. SANDERS',\n",
+       "       'H. CLINTON', 'H. CLINTON', 'B. SANDERS', 'H. CLINTON',\n",
+       "       'B. SANDERS', 'H. CLINTON', 'H. CLINTON', 'B. SANDERS', 'B. SANDERS'],\n",
+       "      dtype='<U15')"
+      ]
+     },
+     "execution_count": 193,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dem_encoding.inverse_transform(res_first)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.datetime64('2016-02-20T00:00:00.000000000')"
+      ]
+     },
+     "execution_count": 194,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res_second."
+   ]
   },
   {
    "cell_type": "code",
