--- a/analyst_forecast/ipynb/stylized_and_full_distribution.ipynb
+++ b/analyst_forecast/ipynb/stylized_and_full_distribution.ipynb
@@ -8035,7 +8035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 475,
    "metadata": {
     "collapsed": true
    },
@@ -8048,7 +8048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
+   "execution_count": 476,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8057,7 +8057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 460,
+   "execution_count": 477,
    "metadata": {},
    "outputs": [
     {
@@ -8087,14 +8087,14 @@
     "        output.append({'TICKER':price_distributions.ix[i]['TICKER'],\n",
     "                       'year':price_distributions.ix[i]['year'],\n",
     "                       'quarternum':price_distributions.ix[i]['quarternum'],\n",
-    "                       'extreme_outcome':1,\n",
+    "                       'y':1,\n",
     "                      })\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 461,
+   "execution_count": 478,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8103,7 +8103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 462,
+   "execution_count": 479,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8112,7 +8112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 463,
+   "execution_count": 480,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8121,7 +8121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 468,
+   "execution_count": 481,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8130,94 +8130,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 472,
+   "execution_count": 482,
    "metadata": {},
    "outputs": [],
    "source": [
-    "superised_df2['extreme_outcome'] = superised_df2['extreme_outcome'].fillna(0)"
+    "superised_df2['y'] = superised_df2['y'].fillna(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 473,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>year</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>extreme_outcome</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0.0</th>\n",
-       "      <td>97773</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1.0</th>\n",
-       "      <td>648</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                  year\n",
-       "extreme_outcome       \n",
-       "0.0              97773\n",
-       "1.0                648"
-      ]
-     },
-     "execution_count": 473,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "superised_df2.groupby('extreme_outcome').agg({'year':'count'})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 405,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2011'"
-      ]
-     },
-     "execution_count": 405,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "648./6"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
