adding y_up y_down

--- a/analyst_forecast/ipynb/stylized_and_full_distribution.ipynb
+++ b/analyst_forecast/ipynb/stylized_and_full_distribution.ipynb
@@ -1192,9 +1192,9 @@
    "outputs": [],
    "source": [
     "#Median forecast - actual\n",
-    "merged['surprise_median_fa']=(merged['meadian']-merged['earn_value'])/merged['std']\n",
+    "merged['surprise_median_fa']=(merged['earn_value']-merged['meadian'])/merged['std']\n",
     "#Mean forecast - actual\n",
-    "merged['surprise_mean_fa']=(merged['mean']-merged['earn_value'])/merged['std']"
+    "merged['surprise_mean_fa']=(merged['earn_value']-merged['mean'])/merged['std']"
    ]
   },
   {
@@ -5620,13 +5620,11 @@
     "                 (superised_df2.year==earnings_event[1])& \n",
     "                 (superised_df2.quarternum==earnings_event[2])]\n",
     "\n",
-    "#     qs, bins = pd.qcut(filter_df.forecast_value,10,retbins=True)\n",
-    "    \n",
+    "\n",
     "    col = 'forecast_value'\n",
     "    output = {}\n",
     "    step=10\n",
     "\n",
-    "#     step=10\n",
     "    for i in range(0,100,step):\n",
     "        bins = [filter_df.forecast_value.quantile(i/100.),filter_df.forecast_value.quantile((i+step)/100.)]\n",
     "        ct = filter_df[(filter_df.forecast_value>=bins[0]) & (filter_df.forecast_value<=bins[1])].shape[0]    \n",
@@ -8082,12 +8080,28 @@
     "    terminal_w = (price_distributions.ix[i].ix[30])\n",
     "    quantile_temp_df = (quantile_y_q[(quantile_y_q.year==price_distributions.ix[i].year) & (quantile_y_q.quarternum==price_distributions.ix[i].quarternum)])\n",
     "\n",
+    "    y=0.\n",
+    "    y_up = 0.\n",
+    "    y_down = 0.\n",
+    "    \n",
     "    if terminal_w >= float(quantile_temp_df[quantile_temp_df.quantile_==.9]['30']) \\\n",
     "    or terminal_w <= float(quantile_temp_df[quantile_temp_df.quantile_==.1]['30']):\n",
+    "        y = 1.\n",
+    "    \n",
+    "    if terminal_w >= float(quantile_temp_df[quantile_temp_df.quantile_==.9]['30']):\n",
+    "        y_up = 1\n",
+    "\n",
+    "    if terminal_w <= float(quantile_temp_df[quantile_temp_df.quantile_==.1]['30']):\n",
+    "        y_down = 1\n",
+    "        \n",
+    "        \n",
     "        output.append({'TICKER':price_distributions.ix[i]['TICKER'],\n",
     "                       'year':price_distributions.ix[i]['year'],\n",
     "                       'quarternum':price_distributions.ix[i]['quarternum'],\n",
     "                       'y':1,\n",
+    "                       'y_up':y_up,\n",
+    "                       'y_down':y_down,\n",
+    "                       \n",
     "                      })\n",
     "    "
    ]
@@ -8139,10 +8153,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 484,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['TICKER', 'quarternum', 'analyst', 'forecast_value', 'year',\n",
+       "       'earn_value', 'std', 'Analyst_Counts', 'Max', 'Min',\n",
+       "       'the max_forecast-min_forecast', 'quantile_forecast_value_count_0',\n",
+       "       'quantile_forecast_value_count_10', 'quantile_forecast_value_count_20',\n",
+       "       'quantile_forecast_value_count_30', 'quantile_forecast_value_count_40',\n",
+       "       'quantile_forecast_value_count_50', 'quantile_forecast_value_count_60',\n",
+       "       'quantile_forecast_value_count_70', 'quantile_forecast_value_count_80',\n",
+       "       'quantile_forecast_value_count_90', 'extreme_outcome', 'y'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 484,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "superised_df2.columns"
+   ]
   },
   {
    "cell_type": "code",
