--- a/analyst_forecast/ipynb/stylized_and_full_distribution_Di.ipynb
+++ b/analyst_forecast/ipynb/stylized_and_full_distribution_Di.ipynb
@@ -35,7 +35,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#read analyst actuals file\n",
@@ -1511,7 +1513,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#read daily price file\n",
@@ -8071,7 +8075,7 @@
     "        output.append({'TICKER':price_distributions.ix[i]['TICKER'],\n",
     "                       'year':price_distributions.ix[i]['year'],\n",
     "                       'quarternum':price_distributions.ix[i]['quarternum'],\n",
-    "                       'y':1,\n",
+    "                       'y':y,\n",
     "                       'y_up':y_up,\n",
     "                       'y_down':y_down,\n",
     "                       \n",
@@ -8174,21 +8178,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
